# nexus-monitoring

./: .gitignore  APM_DEVELOPER_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  README.md  SERVICE_LIFECYCLE.md  docker-compose-collector.yml  docker-compose.prod.yml  docker-compose.yml
agent/: BUILD.md  CMakeLists.txt  MIGRATION_GUIDE.md  README.md  index.js  package-lock.json  package.json  setup_host_collector.sh  test_os_parse  test_os_parse.cpp  test_port_scanner  test_port_scanner.cpp  test_socketio.sh
agent/assets/instrumentation/nodejs/: index.js  sender.js  tracer.js
agent/collectors/: agentCollector.js  dockerCollector.js  processCollector.js  serviceDetector.js  systemCollector.js
agent/config/: agent.conf
agent/handlers/: dockerHandler.js
agent/include/nexus/collectors/: docker_monitor.h  log_collector.h  port_scanner.h  process_scanner.h  security_collector.h  system_metrics.h
agent/include/nexus/communication/: http_agent_client.h  http_client.h  websocket_client.h
agent/include/nexus/detectors/: service_detector.h
agent/include/nexus/handlers/: command_handler.h  docker_handler.h  file_handler.h
agent/include/nexus/orchestrator/: injector.h  instrumentation_manager.h  nodejs_resources.h
agent/include/nexus/utils/: agent_info.h  config.h  json_fwd.h  logger.h  metrics_serializer.h  otlp_converter.h  time_utils.h
agent/instrumentation/: config.js
agent/instrumentation/nodejs/: context.js  index.js  sender.js  tracer.js
agent/instrumentation/nodejs/interceptors/: axios.js  http.js  httpClient.js  mongodb.js  mongoose.js  postgresql.js
agent/src/: main.cpp
agent/src/collectors/: docker_monitor.cpp  log_collector.cpp  port_scanner.cpp  process_scanner.cpp  security_collector.cpp  system_metrics.cpp
agent/src/communication/: http_agent_client.cpp  http_client.cpp  websocket_client.cpp
agent/src/detectors/: service_detector.cpp
agent/src/handlers/: command_handler.cpp  docker_handler.cpp  file_handler.cpp
agent/src/orchestrator/: injector.cpp  instrumentation_manager.cpp
agent/src/utils/: config.cpp  logger.cpp  otlp_converter.cpp
agent/test/: test_collector.js
agent/tests/: CMakeLists.txt
agent/tools/: pack_resources.py
(+186 files in other folders)
